<package>
  <name>dns_pattern_formation</name>
  <description>Implementation of the Dynamic Neighbour Selection (DNS) pattern formation algorithm.</description>
  <maintainer email="nicholishiell@gmail.com">Nicholi Shiell</maintainer>
  <author>Nicholi Shiell</author>
  <license>FREE</license>
  <version>0.0.0</version>
  <url>http://bots.cs.mun.ca/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
</package>
